[gd_scene load_steps=22 format=2]

[ext_resource path="res://script/AnimacaoPintinho.gd" type="Script" id=1]
[ext_resource path="res://Imagens/fase2/pintoDaMadrugada.png" type="Texture" id=2]
[ext_resource path="res://Fonts/Stay Pixel DEMO.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Imagens/cutscene2Fundo.png" type="Texture" id=4]
[ext_resource path="res://Imagens/botaoStartPressionado.png" type="Texture" id=5]
[ext_resource path="res://Imagens/botaoStart.png" type="Texture" id=6]
[ext_resource path="res://Imagens/caixaDeTexto.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 468, 800 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 468, 0, 468, 800 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 936, 0, 468, 800 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[sub_resource type="DynamicFont" id=1]
size = 19
font_data = ExtResource( 3 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 318, 318 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 318, 0, 318, 318 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 636, 0, 318, 318 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 318, 318, 318 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 318, 318, 318, 318 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 636, 318, 318, 318 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 636, 318, 318 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 318, 636, 318, 318 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Fundo" type="AnimatedSprite" parent="."]
position = Vector2( 238, 400.677 )
scale = Vector2( 1.02137, 1.00173 )
frames = SubResource( 10 )
speed_scale = 0.5

[node name="ColorRect" type="Sprite" parent="."]
position = Vector2( 247, 698 )
scale = Vector2( 0.627, 0.505 )
texture = ExtResource( 7 )

[node name="texto" type="RichTextLabel" parent="."]
margin_left = 77.0
margin_top = 698.0
margin_right = 416.0
margin_bottom = 756.0
custom_fonts/normal_font = SubResource( 1 )
text = "Em uma tarde tranquila na cidade de Pilar"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 210.0
margin_top = 738.0
margin_right = 801.0
margin_bottom = 1329.0
rect_scale = Vector2( 0.08, 0.08 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )

[node name="Pintinho" type="AnimatedSprite" parent="."]
position = Vector2( 270, 510 )
scale = Vector2( 0.704402, 0.704402 )
frames = SubResource( 22 )
frame = 3
playing = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
